@@ -150,7 +150,7 @@ class InstlClient(InstlInstanceBase):
                 resolved_sync_base_url = var_stack.resolve("$(SYNC_BASE_URL)")
                 url_main_item = main_url_item(resolved_sync_base_url)
                 var_stack.set_var("SYNC_BASE_URL_MAIN_ITEM", description="from init_default_client_vars").append(url_main_item)
-                default_sync_dir = self.get_default_sync_dir(continue_dir=url_main_item, mkdir=True)
+                default_sync_dir = self.get_default_sync_dir(continue_dir=url_main_item, make_dir=True)
                 var_stack.set_var("LOCAL_SYNC_DIR", description="from init_default_client_vars").append(default_sync_dir)
         # TARGET_OS_NAMES defaults to __CURRENT_OS_NAMES__, which is not what we want if syncing to
         # an OS which is not the current
