@@ -119,7 +119,10 @@ def create_copy_instructions(self):
     self.accumulate_unique_actions('post_copy', self.installState.full_install_items)
 
     self.batch_accum.set_current_section('post-copy')
-    self.batch_accum += self.platform_helper.copy_file_to_file("$(HAVE_INFO_MAP_PATH)", "$(SITE_HAVE_INFO_MAP_PATH)")
+    # Copy the have_info file to the "site" (somewhere in /Library/Application support or c:\ProgramDat) location for reference.
+    # But when preparing offline installers the site location is the same as the sync location - so copy should be avoided.
+    if var_stack.resolve("$(HAVE_INFO_MAP_PATH)") != var_stack.resolve("$(SITE_HAVE_INFO_MAP_PATH)"):
+        self.batch_accum += self.platform_helper.copy_file_to_file("$(HAVE_INFO_MAP_PATH)", "$(SITE_HAVE_INFO_MAP_PATH)")
 
     self.platform_helper.copy_tool.finalize()
 
